--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>mpb</title>
 </head>
 <body>
-    <header>Música Popular Brasileira</header>
+    <header>Música Popular Brasileira</header>  
+
+<P>Como movimento, a MPB também é manifestada pelo lirismo, com letras que abordam as relações amorosas. Nessa faceta da MPB, Chico Buarque é elevado a uma espécie de tradutor da alma feminina, revelando seus desejos, culpas e sonhos no estilo denominado "cantiga e amigo".
+
+</P>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3k8ffECEPic?si=3lf-oFBx4QHv4vbi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
 
