--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mpb</title>
 </head>
+
 <body>
-    <header>Música Popular Brasileira</header>  
+    <header>Música Popular Brasileira</header>
     <section>
         <div class="texto-video1">
             <h1>MPB<h1>
 
-<P>Como movimento, a MPB também é manifestada pelo lirismo, com letras que abordam as relações amorosas. Nessa faceta da MPB, Chico Buarque é elevado a uma espécie de tradutor da alma feminina, revelando seus desejos, culpas e sonhos no estilo denominado "cantiga e amigo".
+                    <P>Como movimento, a MPB também é manifestada pelo lirismo, com letras que abordam as relações
+                        amorosas. Nessa faceta da MPB, Chico Buarque é elevado a uma espécie de tradutor da alma
+                        feminina, revelando seus desejos, culpas e sonhos no estilo denominado "cantiga e amigo".
 
-</P>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/3k8ffECEPic?si=3lf-oFBx4QHv4vbi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-</section>
-<section>
-    <h2> Top melhores músicas populares brasileiras<h2>
-        <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=moINq-uxPtY">
-            <img src="https://img.youtube.com/vi/moINq-uxPtY/maxresdefault.jpg"/>
-            </a>
-            <a href="https://www.youtube.com/watch?v=t7M89YJAPhM">
-                <img src="https://img.youtube.com/vi/t7M89YJAPhM/maxresdefault.jpg">
-                </a>
-                
-                <a href="https://www.youtube.com/watch?v=K5udLFT5-dA"
-                <img src="https://img.youtube.com/vi/K5udLFT5-dA/maxresdefault.jpg"
-            </a>
-                <a href="https://www.youtube.com/watch?v=gyh7lUYXBYg"
-                <img src="https://img.youtube.com/vi/gyh7lUYXBYg/maxresdefault.jpg"
-        </a>
-                <a href="https://www.youtube.com/watch?v=4InSuadZzIU"
-                <img src="https://img.youtube.com/vi/4InSuadZzIU/maxresdefault.jpg"
-    </a>
-                
+                    </P>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/3k8ffECEPic?si=3lf-oFBx4QHv4vbi"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section>
+        <h2> Top melhores músicas populares brasileiras<h2>
+                <div class="categoria-videos">
+                    <a href="https://www.youtube.com/watch?v=moINq-uxPtY">
+                        <img src="https://img.youtube.com/vi/moINq-uxPtY/maxresdefault.jpg" />
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=t7M89YJAPhM">
+                        <img src="https://img.youtube.com/vi/t7M89YJAPhM/maxresdefault.jpg">
+                    </a>
 
-            <div>
-                <section>
+                    <a href="https://www.youtube.com/watch?v=K5udLFT5-dA">
+                        <img src="https://img.youtube.com/vi/K5udLFT5-dA/maxresdefault.jpg">
+                    </a>
+
+                    <a href="https://www.youtube.com/watch?v=gyh7lUYXBYg">
+                        <img src="https://img.youtube.com/vi/gyh7lUYXBYg/maxresdefault.jpg">
+                    </a>
+
+                    <a href="https://www.youtube.com/watch?v=4InSuadZzIU">
+                        <img src="https://img.youtube.com/vi/4InSuadZzIU/maxresdefault.jpg">
+                    </a>
+
+
+                    <div>
+                        <section>
 </body>
 
 </html>
