--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+    
     <section>
         <h2> Top melhores músicas populares brasileiras<h2>
                 <div class="categoria-videos">
@@ -32,24 +33,24 @@
                         <img src="https://img.youtube.com/vi/moINq-uxPtY/maxresdefault.jpg" />
                     </a>
                     <a href="https://www.youtube.com/watch?v=t7M89YJAPhM">
-                        <img src="https://img.youtube.com/vi/t7M89YJAPhM/maxresdefault.jpg">
+                        <img src="https://img.youtube.com/vi/t7M89YJAPhM/maxresdefault.jpg" />
                     </a>
 
                     <a href="https://www.youtube.com/watch?v=K5udLFT5-dA">
-                        <img src="https://img.youtube.com/vi/K5udLFT5-dA/maxresdefault.jpg">
+                        <img src="https://img.youtube.com/vi/K5udLFT5-dA/maxresdefault.jpg" />
                     </a>
 
                     <a href="https://www.youtube.com/watch?v=gyh7lUYXBYg">
-                        <img src="https://img.youtube.com/vi/gyh7lUYXBYg/maxresdefault.jpg">
+                        <img src="https://img.youtube.com/vi/gyh7lUYXBYg/maxresdefault.jpg" />
                     </a>
 
                     <a href="https://www.youtube.com/watch?v=4InSuadZzIU">
-                        <img src="https://img.youtube.com/vi/4InSuadZzIU/maxresdefault.jpg">
+                        <img src="https://img.youtube.com/vi/4InSuadZzIU/maxresdefault.jpg" />
                     </a>
 
 
-                    <div>
-                        <section>
+                </div>
+    </section>
 </body>
 
 </html>
